--- a/src/templates/base_loadbox.html
+++ b/src/templates/base_loadbox.html
@@ -46,6 +46,11 @@
 
     <!-- Bootstrap JQUERY CDN (remote) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- JQUERY -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
     {% endblock %}
 
     <title>{% block title %}{% endblock %}</title>
