--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -5,11 +5,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto px-3">
                 <li class="nav-item">
                     <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
                 </li>
-                <li class="nav-item mx-1">
+                <li class="nav-item px-2 pb-1">
                     <a href="/logout" onclick="confirmar(event)" class="btn btn-secondary">Salir</a>
                 </li>
             </ul>
