--- a/src/templates/base_plan.html
+++ b/src/templates/base_plan.html
@@ -32,20 +32,31 @@
     ></script>
 
     <!-- SweetAlert Javascript (remote)----->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Bootstrap JS CDN (remote) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
             integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" 
             crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" 
+
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" 
             integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" 
             crossorigin="anonymous">
     </script>
 
     <!-- Bootstrap JQUERY CDN (remote) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- FullCalendar JS --->
+    <script defer src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+
+    <!-- JQUERY -->
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Moment.js -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+
     {% endblock %}
 
     <title>{% block title %}{% endblock %}</title>
@@ -53,11 +64,11 @@
 
 <body>
     <!-- I) Navigation Bar (Header Panel) -->
-    {% include 'navbar_detail.html' %}
+    {% include 'navbar_plan.html' %}
 
     <!-- II) Main Panel -->
     <main>
-        <div class="container-fluid px-2" style="margin-top: 4rem;">
+        <div class="container-fluid position-fixed" style="margin-top: 4rem;">
             {% block content %} {% endblock %}
         </div>
     </main>
