--- a/src/templates/base_plan.html
+++ b/src/templates/base_plan.html
@@ -68,7 +68,7 @@
 
     <!-- II) Main Panel -->
     <main>
-        <div class="container-fluid position-fixed" style="margin-top: 4rem;">
+        <div class="container-fluid" style="margin-top: 3.5rem;">
             {% block content %} {% endblock %}
         </div>
     </main>
