--- a/src/templates/base_loadbox.html
+++ b/src/templates/base_loadbox.html
@@ -62,7 +62,7 @@
 
     <!-- II) Main Panel -->
     <main>
-        <div class="container-fluid px-2" style="margin-top: 4rem;">
+        <div class="container-fluid" style="margin-top: 3.5rem;">
             {% block content %} {% endblock %}
         </div>
     </main>
