--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,76 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Register</title>
-
-</head>
-<body style="background-color:azure ">
-    <div class="container d-flex justify-content-center">
-        <div class="card m-5 col-6">
-            <div class="card-header text-white bg-primary"><h4>Register</h4></div>
-            <div class="card-body">
-                <form action="/new_register" method="POST">
-                    {% with messages = get_flashed_messages(category_filter=['new_register']) %}
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous"
+        />
+        <title>Registro</title>
+    </head>
+    <body style="background-color: azure">
+        <div class="container d-flex justify-content-center">
+            <div class="card m-5 col-6">
+                <div class="card-header text-white bg-primary">
+                    <h4>Registro</h4>
+                </div>
+                <div class="card-body">
+                    <form action="/new_register" method="POST">
+                        {% with messages = get_flashed_messages(category_filter=['new_register'])%} 
                         {% if messages %}
                             <div class="alert alert-danger" role="alert">
                                 <strong>Error</strong>
-                                    {% for message in messages %}
-                                        <p>{{message}}</p>
-                                    {% endfor %}
+                                {% for message in messages %}
+                                <p>{{message}}</p>
+                                {% endfor %}
                             </div>
-                        {% endif %}
-                    {% endwith %}
-                    <div class="row mb-2">
-                        <label for="first_name" class="col-sm-4 col-form-label"><strong>Nombre:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" name="first_name">
+                            {% endif %} 
+                        {% endwith %}
+                        <div class="row mb-2">
+                            <label
+                                for="first_name"
+                                class="col-sm-4 col-form-label"
+                                ><strong>Nombre:</strong></label>
+                            <div class="col-sm-8">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    name="first_name"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label for="last_name" class="col-sm-4 col-form-label"><strong>Apellido:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" name="last_name">
+                        <div class="row mb-2">
+                            <label
+                                for="last_name"
+                                class="col-sm-4 col-form-label"
+                                ><strong>Apellido:</strong></label
+                            >
+                            <div class="col-sm-8">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    name="last_name"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label for="company" class="col-sm-4 col-form-label"><strong>Institucion:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" name="company">
+                        <div class="row mb-2">
+                            <label for="company" class="col-sm-4 col-form-label"
+                                ><strong>Institucion:</strong></label
+                            >
+                            <div class="col-sm-8">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    name="company"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label for="email" class="col-sm-4 col-form-label"><strong>Email:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" name="email">
+                        <div class="row mb-2">
+                            <label for="email" class="col-sm-4 col-form-label"
+                                ><strong>Email:</strong></label
+                            >
+                            <div class="col-sm-8">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    name="email"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label for="password" class="col-sm-4 col-form-label"><strong>Contraseña:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="password" class="form-control" name="password">
+                        <div class="row mb-2">
+                            <label
+                                for="password"
+                                class="col-sm-4 col-form-label"
+                                ><strong>Contraseña:</strong></label
+                            >
+                            <div class="col-sm-8">
+                                <input
+                                    type="password"
+                                    class="form-control"
+                                    name="password"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label for="confpw" class="col-sm-4 col-form-label"><strong>Confirma Contraseña:</strong></label>
-                        <div class="col-sm-8">
-                            <input type="password" class="form-control" name="confpw">
+                        <div class="row mb-2">
+                            <label for="confpw" class="col-sm-4 col-form-label"
+                                ><strong>Confirma Contraseña:</strong></label
+                            >
+                            <div class="col-sm-8">
+                                <input
+                                    type="password"
+                                    class="form-control"
+                                    name="confpw"
+                                />
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-md-flex justify-content-md-end pb-3 gap-3">
-                        <a href="/" class="btn btn-sm btn-secondary">Login</a>
-                        <input type="submit" class="btn btn-sm btn-primary" value="Register">
-                    </div>
-                </form>
+                        <div
+                            class="d-md-flex justify-content-md-end pb-3 gap-3"
+                        >
+                            <a href="/" class="btn btn-sm btn-secondary"
+                                >Atras</a
+                            >
+                            <input
+                                type="submit"
+                                class="btn btn-sm btn-primary"
+                                value="Registrarse"
+                            />
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- III) Footer panel -->
-    <footer class="page-footer text-center text-white p-1 fixed-bottom bg-primary">
-        <small>© ELI ELECTRICAL</small>
-    </footer>
-</body>
+        <!-- III) Footer panel -->
+        <footer
+            class="page-footer text-center text-white p-1 fixed-bottom bg-primary"
+        >
+            <small>© ELI ELECTRICAL</small>
+        </footer>
+    </body>
 </html>
