--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -22,7 +22,7 @@
                         color: rgba(65, 68, 65, 0.981);
                     "
                 >
-                    <h4>Ingreso</h4>
+                    <h4>Ingresar</h4>
                 </div>
                 <div class="card-body">
                     <form action="/login" method="POST">
