--- a/src/templates/reset_password.html
+++ b/src/templates/reset_password.html
@@ -10,23 +10,19 @@
             integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
             crossorigin="anonymous"
         />
-        <title>Inicio - ELI</title>
+        <title>Restablecer Contraseña - ELI</title>
     </head>
     <body>
         <div class="container d-flex justify-content-center">
             <div class="card m-3 col-12 col-md-8 col-lg-6">
                 <div
                     class="card-header text-center"
-                    style="
-                        background-color: #e3f2fd;
-                        color: rgba(65, 68, 65, 0.981);
-                    "
-                >
+                    style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981);">
                     <h4>Ingresar</h4>
                 </div>
                 <div class="card-body">
-                    <form action="/login" method="POST">
-                        {% with messages = get_flashed_messages(category_filter=['login']) %} 
+                    <form action="/email_reset" method="POST">
+                        {% with messages = get_flashed_messages(category_filter=['reset',]) %} 
                         {% if messages %}
                         <div class="alert alert-danger" role="alert">
                             <strong>Error</strong>
@@ -36,6 +32,18 @@
                         </div>
                         {% endif %} 
                         {% endwith %}
+                        
+                        {% with messages = get_flashed_messages(category_filter=['success',]) %} 
+                        {% if messages %}
+                        <div class="alert alert-success" role="alert">
+                            <strong>Bien.</strong>
+                            {% for message in messages %}
+                            <p>{{message}}</p>
+                            {% endfor %}
+                        </div>
+                        {% endif %} 
+                        {% endwith %}
+                        
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Correo Electrónico</label>
                             <input
@@ -46,22 +54,10 @@
                                 name="email"
                             />
                         </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                id="exampleInputPassword1"
-                                name="password"
-                            />
+                        <div class="d-flex justify-content-end flex-column flex-sm-row gap-3">
+                            <a href="/" class="btn btn-secondary">Atrás</a>
+                            <input type="submit" class="btn btn-primary" value="Recuperar"/>
                         </div>
-                        <div class="d-flex justify-content-between flex-column flex-sm-row gap-3">
-                            <a class="fw-lighter" href="/reset_password">--> Olvidaste la contraseña <-- </a>
-                            <div class="d-flex gap-2">
-                                <a class="btn btn-secondary" href="/register">Registrarse</a>
-                                <input type="submit" class="btn btn-primary" value="Entrar"/>
-                            </div>
-                        </div>                        
                     </form>
                 </div>
             </div>
@@ -69,8 +65,7 @@
         <!-- III) Footer panel -->
         <footer
             class="page-footer text-center p-2 fixed-bottom"
-            style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981)"
-        >
+            style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981)">
             <small>© ELI ELECTRICAL</small>
         </footer>
     </body>    
