--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -12,7 +12,9 @@
                     <path d="M152.1 38.2c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 113C-2.3 103.6-2.3 88.4 7 79s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zm0 160c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zM224 96c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H256c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H256c-17.7 0-32-14.3-32-32zM160 416c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H192c-17.7 0-32-14.3-32-32zM48 368a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></svg>
                 </a>
             </div>
-            <p id="title_icon" class="text-center">Planificación</p>
+            <div class="mt-3">
+                <h5 id="title_icon" class="text-center">Planificación</h5>
+            </div>
         </div>
         <!-- Loadbox -->
         <div class="col-lg-6 p-3 mb-5 mt-5">
@@ -21,7 +23,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="currentColor" class="fa-solid fa-table"  viewBox="0 0 550 420"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M64 256V160H224v96H64zm0 64H224v96H64V320zm224 96V320H448v96H288zM448 256H288V160H448v96zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"/></svg>
                 </a>
             </div>
-            <p id="title_icon" class="text-center">Cuadro de Cargas</p>
+            <div class="mt-3">
+                <h5 id="title_icon" class="text-center">Cuadro de Cargas</h5>
+            </div>
         </div>
     </div>
 {% endblock %}
