--- a/src/templates/loadbox.html
+++ b/src/templates/loadbox.html
@@ -95,11 +95,11 @@
 
 <div class="container-fluid" style="display: none; margin-bottom: 2.5rem;" id="tg-circuit">
     <div class="row">
-        <div class="mt-1 border border-1">
-            <div class="text-center mt-1">
-                <h4>Circuito</h4>
-            </div>
-            <table class="w-100">
+          <div class="col-xs-12 col-sm-12 mt-1 border border-1 overflow-x-auto">
+              <div class="text-center mt-1">
+                  <h4>Circuito</h4>
+              </div>
+              <table class="w-100">
                 <thead>
                     <tr class="text-center">
                         <th class="border border-start-0 border-dark-subtle">Referencia</th>
@@ -122,7 +122,7 @@
 
 <div class="container-fluid" style="display: none;" id="td-circuit">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 mt-1 border border-1">
+        <div class="col-xs-12 col-sm-12 mt-1 border border-1 overflow-x-auto">
             <div class="text-center mt-1">
                 <h4>Circuito</h4>
             </div>
@@ -148,64 +148,68 @@
 <!-- ---------------------------------------------- MODAL DETAIL --------------------------------------------------------->
 
 <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="nameCircuit"></h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-              <div class="col-sm col-lg mx-2">
-                <table id="table-detail" class="w-100">
-                  <thead id="detail-circuit-head">
-                    <tr class="text-center" style="font-size: 14px;">
-                      <th class="border border-dark-subtle px-1 table-header">Total de Cargas</th>
-                      <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Tensión [V]</th>
-                      <th class="border border-dark-subtle px-1 table-header2">FP</th>
-                      <th class="border border-dark-subtle px-1 table-header2">Tipo de Carga</th>
-                      <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
-                      <th class="border border-dark-subtle px-1 table-header2">VP [V]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Metodo de Instalación</th>
-                      <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
-                      <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Canalizacion [mm]</th>
-                      <th class="border border-dark-subtle px-1 table-header3">Disyuntor</th>
-                      <th class="border border-dark-subtle px-1 table-header3">Diferencial</th>
-                    </tr>
-                  </thead>
-                  <tbody id="detail-circuit-body"></tbody>
-                </table>
-              </div>
-              <div class="col-sm col-lg mx-2 mt-3 d-flex justify-content-center">
-                <table id="table-detail-loads" class="w-100">
-                  <thead id="detail-circuit-loads-head">
-                    <tr class="text-center" style="font-size: 14px;">
-                      <th class="border border-dark-subtle px-1">Nombre</th>
-                      <th class="border border-dark-subtle px-1">Largo [MT]</th>
-                      <th class="border border-dark-subtle px-1">Cantidad de Cargas</th>
-                      <th class="border border-dark-subtle px-1">Potencia por Carga [W]</th>
-                      <th class="border border-dark-subtle px-1">Potencia Total [KW]</th>
-                      <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
-                      <th class="border border-dark-subtle px-1">Tensión [V]</th>
-                      <th class="border border-dark-subtle px-1">Opciones</th>
-                    </tr>
-                  </thead>
-                  <tbody id="detail-circuit-loads-body"></tbody>
-                </table>
-              </div>
+  <div class="modal-dialog modal-xl modal-sm"> <!-- modal-sm para pantallas pequeñas -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="nameCircuit"></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-12 mx-2">
+            <div class="table-responsive"> <!-- tabla scrollable en pantallas pequeñas -->
+              <table id="table-detail" class="w-100">
+                <thead id="detail-circuit-head">
+                  <tr class="text-center" style="font-size: 14px;">
+                    <th class="border border-dark-subtle px-1 table-header">Total de Cargas</th>
+                    <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Tensión [V]</th>
+                    <th class="border border-dark-subtle px-1 table-header2">FP</th>
+                    <th class="border border-dark-subtle px-1 table-header2">Tipo de Carga</th>
+                    <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
+                    <th class="border border-dark-subtle px-1 table-header2">VP [V]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Metodo de Instalación</th>
+                    <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
+                    <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Canalizacion [mm]</th>
+                    <th class="border border-dark-subtle px-1 table-header3">Disyuntor</th>
+                    <th class="border border-dark-subtle px-1 table-header3">Diferencial</th>
+                  </tr>
+                </thead>
+                <tbody id="detail-circuit-body"></tbody>
+              </table>
             </div>
           </div>
-          
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">Agregar Cargas</button>
+          <div class="col-12 mx-2 mt-3"> <!-- similar ajuste para esta columna -->
+            <div class="table-responsive"> <!-- tabla scrollable en pantallas pequeñas -->
+              <table id="table-detail-loads" class="w-100">
+                <thead id="detail-circuit-loads-head">
+                  <tr class="text-center" style="font-size: 14px;">
+                    <th class="border border-dark-subtle px-1">Nombre</th>
+                    <th class="border border-dark-subtle px-1">Largo [MT]</th>
+                    <th class="border border-dark-subtle px-1">Cantidad de Cargas</th>
+                    <th class="border border-dark-subtle px-1">Potencia por Carga [W]</th>
+                    <th class="border border-dark-subtle px-1">Potencia Total [KW]</th>
+                    <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
+                    <th class="border border-dark-subtle px-1">Tensión [V]</th>
+                    <th class="border border-dark-subtle px-1">Opciones</th>
+                  </tr>
+                </thead>
+                <tbody id="detail-circuit-loads-body"></tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">Agregar Cargas</button>
+      </div>
     </div>
+  </div>
 </div>
+
 
 <!-- ---------------------------------------------------- MODAL ADD LOADS -------------------------------------------------->
 
@@ -230,46 +234,50 @@
 <!-- ------------- MODAL DETAIL CIRCUITS TDS ------->
 
 <div class="modal fade" id="staticBackdrop4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="nameCircuitTd"></h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-              <div class="col-sm col-lg mx-2">
-                <table id="table-detail" class="w-100">
-                  <thead id="detail-tds-circuits-head">
-                    <tr class="text-center" style="font-size: 14px;">
-                      <th class="border border-dark-subtle px-1 table-header">Total de Cargas</th>
-                      <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Tensión [V]</th>
-                      <th class="border border-dark-subtle px-1 table-header2">FP</th>
-                      <th class="border border-dark-subtle px-1 table-header2">Tipo de Carga</th>
-                      <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
-                      <th class="border border-dark-subtle px-1 table-header2">VP [V]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Metodo de Instalación</th>
-                      <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
-                      <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Canalizacion [mm]</th>
-                      <th class="border border-dark-subtle px-1 table-header3">Disyuntor</th>
-                      <th class="border border-dark-subtle px-1 table-header3">Diferencial</th>
-                    </tr>
-                  </thead>
-                  <tbody id="detail-tds-circuits-body"></tbody>
-                </table>
-              </div>
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="nameCircuitTd"></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm col-lg mx-2">
+            <!-- Tabla con scroll horizontal en pantallas pequeñas -->
+            <div class="table-responsive">
+              <table id="table-detail" class="w-100">
+                <thead id="detail-tds-circuits-head">
+                  <tr class="text-center" style="font-size: 14px;">
+                    <th class="border border-dark-subtle px-1 table-header">Total de Cargas</th>
+                    <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Tensión [V]</th>
+                    <th class="border border-dark-subtle px-1 table-header2">FP</th>
+                    <th class="border border-dark-subtle px-1 table-header2">Tipo de Carga</th>
+                    <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
+                    <th class="border border-dark-subtle px-1 table-header2">VP [V]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Metodo de Instalación</th>
+                    <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
+                    <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
+                    <th class="border border-dark-subtle px-1 table-header">Canalizacion [mm]</th>
+                    <th class="border border-dark-subtle px-1 table-header3">Disyuntor</th>
+                    <th class="border border-dark-subtle px-1 table-header3">Diferencial</th>
+                  </tr>
+                </thead>
+                <tbody id="detail-tds-circuits-body"></tbody>
+              </table>
             </div>
           </div>
-          
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         </div>
       </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
     </div>
+  </div>
 </div>
+
 
 <!------------ EDIT NAME TG ---------------->
 
