--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd;">
-    <div class="container-fluid px-3">
+    <div class="container-fluid align-item-middle px-3">
         <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);">Bienvenido</a>
-        <button class="navbar-toggler" style="background-color: #e3f2fd;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse text-start" style="background-color: #e3f2fd;"id="navbarNav">
             <ul class="navbar-nav ms-auto px-3">
                 <li class="nav-item">
                     <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
