--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -42,7 +42,7 @@
     </script>
 
     <!-- SweetAlert (remote)----->
-    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Bootstrap JQUERY CDN (remote) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
