--- a/src/templates/base_plan.html
+++ b/src/templates/base_plan.html
@@ -24,6 +24,9 @@
         crossorigin="anonymous"
     />
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+
     <!-- Font Awesome CDN(remote) -->
     <script
         defer
@@ -56,6 +59,35 @@
 
     <!-- Moment.js -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+            {% set cat = category|string %}
+            
+            {# --- LÓGICA PARA QUE 'error' MUESTRE 'warning' --- #}
+            {% set icon =
+                'success' if cat in ['success','success_add_piso','success_add_local','success_add_centro','success_observacion']
+                else 'warning' if cat in ['error','error_add_piso','error_add_local','error_add_centro', 'error_observacion']
+                else 'info'
+            %}
+
+            Swal.fire({
+                position: 'top',
+                icon: '{{ icon }}',
+                {# El título se muestra solo si el ícono es 'warning' #}
+                title: ({{ 'true' if icon == 'warning' else 'false' }}) ? 'Atención' : undefined,
+                text: {{ message|tojson }},
+                timer: ({{ '2500' if icon in ['success','info'] else '3000' }}),
+                width: '35em'
+            });
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+    });
+    </script>
 
     {% endblock %}
 
