--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -7,15 +7,17 @@
         <!-- Planification -->
         <div class="col-lg-6 p-3 mb-5 mt-5">
             <div class="card-body d-flex justify-content-center align-items-center">
-                <a href="/planning/">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="currentColor" class="fa-solid fa-list-check" viewBox="0 0 550 410"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                <a href="/report/">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" fill="currentColor" class="fa-solid fa-list-check" viewBox="0 0 550 410">
                     <path d="M152.1 38.2c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 113C-2.3 103.6-2.3 88.4 7 79s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zm0 160c9.9 8.9 10.7 24 1.8 33.9l-72 80c-4.4 4.9-10.6 7.8-17.2 7.9s-12.9-2.4-17.6-7L7 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l22.1 22.1 55.1-61.2c8.9-9.9 24-10.7 33.9-1.8zM224 96c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H256c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H256c-17.7 0-32-14.3-32-32zM160 416c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H192c-17.7 0-32-14.3-32-32zM48 368a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></svg>
                 </a>
             </div>
             <div class="mt-3">
-                <h5 id="title_icon" class="text-center">Planificación</h5>
+                <h5 id="title_icon" class="text-center">Informe de Recepción</h5>
             </div>
         </div>
+
+
         <!-- Loadbox -->
         <div class="col-lg-6 p-3 mb-5 mt-5">
             <div class="card-body d-flex justify-content-center align-items-center">
