--- a/src/templates/navbar_loadbox.html
+++ b/src/templates/navbar_loadbox.html
@@ -11,6 +11,9 @@
                     <a class="nav-link" aria-current="page" href="/dashboard">Inicio</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#staticProyect" href="new_proyect">Crear Proyecto</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="modal" data-bs-target="#staticTableroGeneral" href="#">Nuevo tablero general</a>
                 </li>
                 <li class="nav-item">
@@ -130,41 +133,6 @@
     </div>
 </div>
 
-<!-- Modal nuevo tablero distribucion-->
- <!-- error -->
-<script>
-    {% with messages = get_flashed_messages(category_filter=['new_td']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'warning',
-                    title: 'Error',
-                    text: '{{ message }}',
-                    timer: 3000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
-
-<!-- success -->
-<script>
-    {% with messages = get_flashed_messages(category_filter=['td_success']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'success',
-                    text: '{{ message }}',
-                    timer: 2000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
 
 <div class="modal fade" id="staticTableroDistribucion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -238,79 +206,6 @@
     </div>
 </div>
 
-<!-- Modal agregar circuitos-->
-
- <!-- error -->
-<script>
-    {% with messages = get_flashed_messages(category_filter=['new_circuit']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'warning',
-                    title: 'Error',
-                    text: '{{ message }}',
-                    timer: 3000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
-
-<!-- success -->
-<script>
-    {% with messages = get_flashed_messages(category_filter=['circuit_success']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'success',
-                    text: '{{ message }}',
-                    timer: 2000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
-
-<!-- error add load -->
-
-<script>
-    {% with messages = get_flashed_messages(category_filter=['load_new']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'warning',
-                    title: 'Error',
-                    text: '{{ message }}',
-                    timer: 3000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
-
-<!-- success add load -->
-
-<script>
-    {% with messages = get_flashed_messages(category_filter=['load_success']) %}
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    position: 'top',
-                    icon: 'success',
-                    text: '{{ message }}',
-                    timer: 2000,
-                    width: '35em'
-                });
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</script>
 
 <div class="modal fade modal-xl modal-sm" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -385,12 +280,12 @@
 
                         <div class="col-md-6 px-4">
                             <div class="input-group my-3">
-                                <span class="input-group-text" id="basic-addon1">Nombre de la Carga</span>
-                                <input type="text" class="form-control" placeholder="Ingresa nombre del consumo." aria-label="Username" aria-describedby="basic-addon1" name="nameloads">
+                                <span class="input-group-text" id="basic-addon1">Referencia</span>
+                                <input type="text" class="form-control" placeholder="Ubicacion o referencia." aria-label="Username" aria-describedby="basic-addon1" name="nameloads">
                             </div>
                             <div class="input-group my-3">
-                                <span class="input-group-text" id="basic-addon1">Referencia</span>
-                                <input type="text" class="form-control" placeholder="Ubicacion o referencia." aria-label="Username" aria-describedby="basic-addon1" name="ref">
+                                <span class="input-group-text" id="basic-addon1">Nombre de la Carga</span>
+                                <input type="text" class="form-control" placeholder="Ingresa nombre o detalle del consumo." aria-label="Username" aria-describedby="basic-addon1" name="ref">
                             </div>
                             <div class="input-group mt-3">
                                 <span class="input-group-text" id="basic-addon1">Cantidad de Cargas</span>
